<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemOne"
        android:title="@string/frag_item_one"
        android:enabled="true"
        android:icon="@drawable/ic_money_off_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/itemTwo"
        android:title="@string/frag_item_two"
        android:enabled="true"
        android:icon="@drawable/ic_location_on_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/itemThree"
        android:title="@string/frag_item_three"
        android:enabled="true"
        android:icon="@drawable/ic_assessment_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/itemFour"
        android:title="@string/frag_item_four"
        android:enabled="true"
        android:icon="@drawable/ic_mood_black_24dp"
        app:showAsAction="always"/>
</menu>